--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-6 text-md-end text-center">
                     <a href="tel:+14013272971" class="top-bar-link"><i class="fas fa-phone me-2"></i>(401) 327-2971</a>
-                    <a href="mailto:nickbilodeau1150@yahoo.com" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i>nickbilodeau1150@yahoo.com</a>
+                    <a href="/cdn-cgi/l/email-protection#4826212b232a2124272c2d293d79797d78083129202727662b2725" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i><span class="__cf_email__" data-cfemail="8ae4e3e9e1e8e3e6e5eeefebffbbbbbfbacaf3ebe2e5e5a4e9e5e7">[email&#160;protected]</span></a>
                 </div>
             </div>
         </div>
@@ -273,8 +273,7 @@
                                         <div class="laptop-title">WiFi Analyzer</div>
                                     </div>
                                     <video class="laptop-video" autoplay loop muted playsinline>
-                                        <source src="assets/videos/case-study-app.mp4" type="video/mp4">
-                                        <source src="assets/videos/case-study-app.mov" type="video/quicktime">
+                                        <source src="assets/videos/Screen_Recording_2026-01-24_at_2_12_24_PM.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
@@ -506,7 +505,7 @@
                             <a href="tel:+14013272971" class="btn btn-light btn-lg w-100">
                                 <i class="fas fa-phone me-2"></i>Call (401) 327-2971
                             </a>
-                            <p class="mt-2 mb-0 small opacity-75">Or email: nickbilodeau1150@yahoo.com</p>
+                            <p class="mt-2 mb-0 small opacity-75">Or email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b7d9ded4dcd5dedbd8d3d2d6c286868287f7ced6dfd8d899d4d8da">[email&#160;protected]</a></p>
                         </div>
                     </div>
                 </div>
@@ -796,7 +795,7 @@
                                     </div>
                                     <div>
                                         <strong>Email</strong>
-                                        <a href="mailto:nickbilodeau1150@yahoo.com">nickbilodeau1150@yahoo.com</a>
+                                        <a href="/cdn-cgi/l/email-protection#99f7f0faf2fbf0f5f6fdfcf8eca8a8aca9d9e0f8f1f6f6b7faf6f4"><span class="__cf_email__" data-cfemail="83edeae0e8e1eaefece7e6e2f6b2b2b6b3c3fae2ebececade0ecee">[email&#160;protected]</span></a>
                                     </div>
                                 </div>
 
@@ -922,7 +921,7 @@
                     <p class="footer-about">Enterprise-quality IT & AI solutions at small business prices. Based in Cranston, RI.</p>
                     <div class="footer-contact-highlight">
                         <a href="tel:+14013272971"><i class="fas fa-phone me-2"></i>(401) 327-2971</a>
-                        <a href="mailto:nickbilodeau1150@yahoo.com"><i class="fas fa-envelope me-2"></i>nickbilodeau1150@yahoo.com</a>
+                        <a href="/cdn-cgi/l/email-protection#f59b9c969e979c999a91909480c4c4c0c5b58c949d9a9adb969a98"><i class="fas fa-envelope me-2"></i><span class="__cf_email__" data-cfemail="bbd5d2d8d0d9d2d7d4dfdedace8a8a8e8bfbc2dad3d4d495d8d4d6">[email&#160;protected]</span></a>
                     </div>
                 </div>
 
@@ -957,7 +956,7 @@
                     <ul class="footer-contact">
                         <li><i class="fas fa-map-marker-alt"></i> Cranston, RI 02920</li>
                         <li><i class="fas fa-phone"></i> <a href="tel:+14013272971">(401) 327-2971</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:nickbilodeau1150@yahoo.com">nickbilodeau1150@yahoo.com</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="/cdn-cgi/l/email-protection#3856515b535a5154575c5d594d09090d08784159505757165b5755"><span class="__cf_email__" data-cfemail="56383f353d343f3a393233372367676366162f373e39397835393b">[email&#160;protected]</span></a></li>
                     </ul>
                     <div class="footer-badge">
                         <i class="fas fa-shield-alt"></i>
@@ -978,7 +977,7 @@
     </a>
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 
@@ -2323,6 +2322,241 @@
     </script>
 
     <style>
+    /* Laptop Mockup Styles */
+    .case-study-video-wrapper {
+        position: relative;
+    }
+    .laptop-mockup {
+        background: linear-gradient(145deg, #2d3748 0%, #1a202c 100%);
+        border-radius: 20px;
+        padding: 12px;
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4), 0 0 0 1px rgba(255,255,255,0.1);
+    }
+    .laptop-screen {
+        background: #0f172a;
+        border-radius: 12px;
+        overflow: hidden;
+        position: relative;
+    }
+    .laptop-header {
+        background: linear-gradient(90deg, #1e293b 0%, #334155 100%);
+        padding: 10px 16px;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        border-bottom: 1px solid rgba(255,255,255,0.05);
+    }
+    .laptop-dots {
+        display: flex;
+        gap: 6px;
+    }
+    .laptop-dots span {
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        display: block;
+    }
+    .laptop-dots span:nth-child(1) { background: #ef4444; }
+    .laptop-dots span:nth-child(2) { background: #eab308; }
+    .laptop-dots span:nth-child(3) { background: #22c55e; }
+    .laptop-title {
+        color: #94a3b8;
+        font-size: 13px;
+        font-weight: 500;
+    }
+    .laptop-video {
+        width: 100%;
+        display: block;
+        min-height: 280px;
+        background: #0f172a;
+        object-fit: cover;
+    }
+    .laptop-base {
+        background: linear-gradient(180deg, #374151 0%, #1f2937 100%);
+        height: 18px;
+        border-radius: 0 0 12px 12px;
+        margin-top: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .laptop-notch {
+        width: 80px;
+        height: 5px;
+        background: #4b5563;
+        border-radius: 0 0 4px 4px;
+    }
+
+    /* DevScope Mockup Styles */
+    .devscope-preview {
+        position: relative;
+    }
+    .devscope-mockup {
+        background: linear-gradient(145deg, #1e1b4b 0%, #312e81 50%, #1e1b4b 100%);
+        border-radius: 16px;
+        overflow: hidden;
+        box-shadow: 0 25px 50px -12px rgba(139, 92, 246, 0.3), 0 0 0 1px rgba(139, 92, 246, 0.2);
+    }
+    .devscope-header {
+        background: rgba(15, 12, 41, 0.8);
+        padding: 12px 16px;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        border-bottom: 1px solid rgba(139, 92, 246, 0.2);
+    }
+    .devscope-dots {
+        display: flex;
+        gap: 6px;
+    }
+    .devscope-dots span {
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        display: block;
+    }
+    .devscope-dots span:nth-child(1) { background: #ef4444; }
+    .devscope-dots span:nth-child(2) { background: #eab308; }
+    .devscope-dots span:nth-child(3) { background: #22c55e; }
+    .devscope-title {
+        color: #a78bfa;
+        font-size: 13px;
+        font-weight: 600;
+    }
+    .devscope-content {
+        padding: 24px;
+    }
+    .devscope-input-row {
+        display: flex;
+        gap: 12px;
+        margin-bottom: 20px;
+    }
+    .devscope-input {
+        flex: 1;
+        background: rgba(15, 12, 41, 0.6);
+        border: 1px solid rgba(139, 92, 246, 0.3);
+        border-radius: 8px;
+        padding: 12px 16px;
+        color: #c4b5fd;
+        font-size: 14px;
+    }
+    .devscope-btn {
+        background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);
+        color: white;
+        padding: 12px 24px;
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 14px;
+        cursor: pointer;
+        transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .devscope-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(139, 92, 246, 0.4);
+    }
+    .devscope-stats {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+    }
+    .devscope-stat {
+        background: rgba(15, 12, 41, 0.6);
+        border-radius: 8px;
+        padding: 10px 14px;
+        font-size: 12px;
+        color: #94a3b8;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        border: 1px solid rgba(255,255,255,0.05);
+    }
+    .devscope-stat span {
+        font-weight: 700;
+        font-size: 16px;
+    }
+    .devscope-stat.critical span { color: #ef4444; }
+    .devscope-stat.error span { color: #f97316; }
+    .devscope-stat.warning span { color: #eab308; }
+    .devscope-stat.network span { color: #3b82f6; }
+    .devscope-stat.perf span { color: #8b5cf6; }
+    .devscope-metrics {
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        color: #94a3b8;
+        font-size: 13px;
+    }
+    .devscope-metrics b {
+        color: #22c55e;
+    }
+
+    /* Case Study Badges */
+    .case-study-badge {
+        display: inline-flex;
+        align-items: center;
+        padding: 6px 14px;
+        border-radius: 20px;
+        font-size: 13px;
+        font-weight: 600;
+        margin-bottom: 16px;
+    }
+    .wifi-badge {
+        background: rgba(37, 99, 235, 0.1);
+        color: #3b82f6;
+        border: 1px solid rgba(37, 99, 235, 0.2);
+    }
+    .devscope-badge {
+        background: rgba(139, 92, 246, 0.1);
+        color: #8b5cf6;
+        border: 1px solid rgba(139, 92, 246, 0.2);
+    }
+    .case-study-title {
+        font-size: 2rem;
+        font-weight: 700;
+        color: #1e293b;
+        margin-bottom: 16px;
+    }
+    .case-study-description {
+        color: #64748b;
+        font-size: 1.05rem;
+        line-height: 1.7;
+        margin-bottom: 24px;
+    }
+    .case-study-features {
+        margin-bottom: 24px;
+    }
+    .feature-item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 12px;
+        color: #475569;
+    }
+    .feature-item i {
+        color: #22c55e;
+        font-size: 16px;
+    }
+    .case-study-quote {
+        background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+        border-left: 4px solid #3b82f6;
+        padding: 20px 24px;
+        border-radius: 0 12px 12px 0;
+        margin: 24px 0;
+    }
+    .case-study-quote p {
+        color: #475569;
+        font-style: italic;
+        margin-bottom: 8px;
+        line-height: 1.6;
+    }
+    .case-study-quote cite {
+        color: #64748b;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+    }
+
     #office3d-container {
         position: relative;
         width: 100%;
@@ -2362,34 +2596,4 @@
         margin-right: 4px;
     }
     @keyframes fadeInUp {
-        from { opacity: 0; transform: translateX(-50%) translateY(15px); }
-        to { opacity: 1; transform: translateX(-50%) translateY(0); }
-    }
-
-    /* Glow effect on container */
-    #office3d-container::before {
-        content: '';
-        position: absolute;
-        top: -2px;
-        left: -2px;
-        right: -2px;
-        bottom: -2px;
-        background: linear-gradient(45deg, rgba(37, 99, 235, 0.3), rgba(6, 182, 212, 0.3));
-        border-radius: 22px;
-        z-index: -1;
-        filter: blur(10px);
-        opacity: 0.5;
-    }
-
-    /* Smooth scene fade-in */
-    #office3d {
-        animation: sceneLoad 1s ease-out 0.3s both;
-    }
-
-    @keyframes sceneLoad {
-        from { opacity: 0; transform: scale(0.98); }
-        to { opacity: 1; transform: scale(1); }
-    }
-    </style>
-</body>
-</html>
+        from { opa
