--- a/index.html
+++ b/index.html
@@ -2337,7 +2337,6 @@
         border-radius: 12px;
         overflow: hidden;
         position: relative;
-        min-height: 300px;
     }
     .laptop-header {
         background: linear-gradient(90deg, #1e293b 0%, #334155 100%);
@@ -2367,10 +2366,10 @@
     }
     .laptop-video {
         width: 100%;
-        max-height: 450px;
         display: block;
+        min-height: 280px;
         background: #0f172a;
-        object-fit: contain;
+        object-fit: cover;
     }
     .laptop-base {
         background: linear-gradient(180deg, #374151 0%, #1f2937 100%);
