--- a/index.html
+++ b/index.html
@@ -263,25 +263,10 @@
                 <!-- Case Study 1: WiFi Analyzer for Mac -->
                 <div class="row align-items-center g-5 mb-6">
                     <div class="col-lg-7">
-                        <div class="case-study-video-wrapper">
-                            <div class="laptop-mockup">
-                                <div class="laptop-screen">
-                                    <div class="laptop-header">
-                                        <div class="laptop-dots">
-                                            <span></span><span></span><span></span>
-                                        </div>
-                                        <div class="laptop-title">WiFi Analyzer</div>
-                                    </div>
-                                    <video class="laptop-video" autoplay loop muted playsinline>
-                                        <source src="assets/videos/Screen_Recording_2026-01-24_at_2_12_24_PM.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-                                <div class="laptop-base">
-                                    <div class="laptop-notch"></div>
-                                </div>
-                            </div>
-                        </div>
+                        <video autoplay loop muted playsinline style="width: 100%; border-radius: 12px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); background: #000;">
+                            <source src="Screen_Recording_2026-01-24_at_2_12_24_PM.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="col-lg-5">
                         <div class="case-study-content">
@@ -2337,6 +2322,7 @@
         border-radius: 12px;
         overflow: hidden;
         position: relative;
+        min-height: 300px;
     }
     .laptop-header {
         background: linear-gradient(90deg, #1e293b 0%, #334155 100%);
@@ -2366,10 +2352,10 @@
     }
     .laptop-video {
         width: 100%;
+        max-height: 450px;
         display: block;
-        min-height: 280px;
         background: #0f172a;
-        object-fit: cover;
+        object-fit: contain;
     }
     .laptop-base {
         background: linear-gradient(180deg, #374151 0%, #1f2937 100%);
