Replace law firm case study with real estate example

--- a/service-ai.html
+++ b/service-ai.html
@@ -214,8 +214,8 @@
                     <div class="col-lg-4">
                         <div class="use-case-card">
                             <div class="use-case-number">2</div>
-                            <h4>Law Firm: Document Analysis</h4>
-                            <p>A law firm needed to review hundreds of pages of contracts. I implemented Claude to analyze documents, extract key terms, and flag potential issues. What took paralegals days now takes hours, and they catch more issues.</p>
+                            <h4>Real Estate: Listing Descriptions</h4>
+                            <p>A local realtor was spending hours writing property descriptions. I set up AI to generate compelling listings from property details and photos. Now they create professional, SEO-optimized descriptions in minutes and list properties faster than competitors.</p>
                         </div>
                     </div>
 
