--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,8 @@
     scene.background = new THREE.Color(0x0a0f1a);
 
     const camera = new THREE.PerspectiveCamera(45, container.offsetWidth / container.offsetHeight, 0.1, 100);
-    camera.position.set(5, 3.5, 5);
+    // Start close to the monitor screen
+    camera.position.set(0, 1.3, 1.5);
 
     const renderer = new THREE.WebGLRenderer({
         canvas: canvas,
@@ -1351,14 +1352,43 @@
 
     // OrbitControls
     const controls = new OrbitControls(camera, renderer.domElement);
-    controls.target.set(0, 1, 0);
+    controls.target.set(0, 1.25, -0.5); // Look at monitor
     controls.enableDamping = true;
     controls.dampingFactor = 0.05;
     controls.minDistance = 2;
     controls.maxDistance = 15;
     controls.maxPolarAngle = Math.PI / 2.1;
-    controls.autoRotate = true;
+    controls.autoRotate = false; // Start without rotation
     controls.autoRotateSpeed = 0.3;
+
+    // Cinematic intro: pull back from monitor then start rotating
+    let introComplete = false;
+    setTimeout(() => {
+        const startPos = camera.position.clone();
+        const endPos = new THREE.Vector3(5, 3.5, 5);
+        const startTarget = controls.target.clone();
+        const endTarget = new THREE.Vector3(0, 1, 0);
+        const duration = 2500;
+        const startTime = performance.now();
+
+        function animateIntro() {
+            const elapsed = performance.now() - startTime;
+            const progress = Math.min(elapsed / duration, 1);
+            // Smooth ease-out
+            const eased = 1 - Math.pow(1 - progress, 3);
+
+            camera.position.lerpVectors(startPos, endPos, eased);
+            controls.target.lerpVectors(startTarget, endTarget, eased);
+
+            if (progress < 1) {
+                requestAnimationFrame(animateIntro);
+            } else {
+                controls.autoRotate = true;
+                introComplete = true;
+            }
+        }
+        animateIntro();
+    }, 2000); // Wait 2 seconds looking at screen before pulling back
 
     // ========== POST-PROCESSING ==========
     const composer = new EffectComposer(renderer);
@@ -2620,28 +2650,125 @@
     scene.add(robot2);
     robots.push(robot2);
 
-    // Server rack for robot 2
-    const serverRack = new THREE.Mesh(
-        new THREE.BoxGeometry(0.4, 1.2, 0.3),
-        new THREE.MeshStandardMaterial({ color: 0x1e293b, metalness: 0.6, roughness: 0.4 })
-    );
-    serverRack.position.set(3.5, 0.6, -2.5);
-    serverRack.castShadow = true;
-    scene.add(serverRack);
+    // ========== SERVER ROOM AREA ==========
+    const serverRackMaterial = new THREE.MeshStandardMaterial({
+        color: 0x1e293b,
+        metalness: 0.7,
+        roughness: 0.3
+    });
 
-    // Server lights
-    for (let i = 0; i < 5; i++) {
-        const serverLight = new THREE.Mesh(
-            new THREE.BoxGeometry(0.15, 0.02, 0.01),
-            new THREE.MeshStandardMaterial({
-                color: i % 2 === 0 ? 0x22c55e : 0x06b6d4,
-                emissive: i % 2 === 0 ? 0x22c55e : 0x06b6d4,
-                emissiveIntensity: 0.8
-            })
+    // Create multiple server racks in a row along the back-right
+    const serverPositions = [
+        { x: 3.5, z: -2.5 },
+        { x: 3.5, z: -3.3 },
+        { x: 3.5, z: -4.1 },
+        { x: 4.2, z: -3.3 },
+        { x: 4.2, z: -4.1 }
+    ];
+
+    serverPositions.forEach((pos, rackIndex) => {
+        // Server rack cabinet
+        const rack = new THREE.Mesh(
+            new THREE.BoxGeometry(0.5, 1.4, 0.6),
+            serverRackMaterial
         );
-        serverLight.position.set(3.5, 0.25 + i * 0.2, -2.34);
-        scene.add(serverLight);
-    }
+        rack.position.set(pos.x, 0.7, pos.z);
+        rack.castShadow = true;
+        scene.add(rack);
+
+        // Server rack front panel (darker)
+        const frontPanel = new THREE.Mesh(
+            new THREE.BoxGeometry(0.48, 1.35, 0.02),
+            new THREE.MeshStandardMaterial({ color: 0x0f172a, metalness: 0.8, roughness: 0.2 })
+        );
+        frontPanel.position.set(pos.x, 0.7, pos.z + 0.3);
+        scene.add(frontPanel);
+
+        // Server units inside each rack
+        for (let i = 0; i < 6; i++) {
+            // Server unit
+            const serverUnit = new THREE.Mesh(
+                new THREE.BoxGeometry(0.44, 0.15, 0.5),
+                new THREE.MeshStandardMaterial({ color: 0x374151, metalness: 0.6, roughness: 0.4 })
+            );
+            serverUnit.position.set(pos.x, 0.15 + i * 0.2, pos.z);
+            scene.add(serverUnit);
+
+            // Status LEDs (randomized colors for variety)
+            const ledColors = [0x22c55e, 0x06b6d4, 0xf59e0b, 0x22c55e, 0x06b6d4];
+            for (let j = 0; j < 3; j++) {
+                const led = new THREE.Mesh(
+                    new THREE.BoxGeometry(0.02, 0.02, 0.01),
+                    new THREE.MeshStandardMaterial({
+                        color: ledColors[(rackIndex + i + j) % ledColors.length],
+                        emissive: ledColors[(rackIndex + i + j) % ledColors.length],
+                        emissiveIntensity: 1
+                    })
+                );
+                led.position.set(pos.x - 0.15 + j * 0.08, 0.15 + i * 0.2, pos.z + 0.31);
+                scene.add(led);
+            }
+
+            // Activity indicator bar
+            const activityBar = new THREE.Mesh(
+                new THREE.BoxGeometry(0.12, 0.015, 0.01),
+                new THREE.MeshStandardMaterial({
+                    color: i % 2 === 0 ? 0x06b6d4 : 0x22c55e,
+                    emissive: i % 2 === 0 ? 0x06b6d4 : 0x22c55e,
+                    emissiveIntensity: 0.6
+                })
+            );
+            activityBar.position.set(pos.x + 0.1, 0.15 + i * 0.2, pos.z + 0.31);
+            scene.add(activityBar);
+        }
+
+        // Ventilation grills on top
+        const ventGrill = new THREE.Mesh(
+            new THREE.BoxGeometry(0.4, 0.02, 0.5),
+            new THREE.MeshStandardMaterial({ color: 0x1f2937, metalness: 0.5, roughness: 0.6 })
+        );
+        ventGrill.position.set(pos.x, 1.41, pos.z);
+        scene.add(ventGrill);
+    });
+
+    // Server room ambient glow
+    const serverGlow = new THREE.PointLight(0x06b6d4, 1.5, 5);
+    serverGlow.position.set(3.8, 1, -3.5);
+    scene.add(serverGlow);
+
+    const serverGlow2 = new THREE.PointLight(0x22c55e, 1, 4);
+    serverGlow2.position.set(4, 0.5, -4);
+    scene.add(serverGlow2);
+
+    // Floor cable management / raised floor effect near servers
+    const raisedFloor = new THREE.Mesh(
+        new THREE.BoxGeometry(2.5, 0.05, 3),
+        new THREE.MeshStandardMaterial({ color: 0x1e293b, metalness: 0.3, roughness: 0.7 })
+    );
+    raisedFloor.position.set(3.8, 0.025, -3.3);
+    scene.add(raisedFloor);
+
+    // Cable runs on floor
+    const cableMaterial = new THREE.MeshStandardMaterial({
+        color: 0x0ea5e9,
+        emissive: 0x0ea5e9,
+        emissiveIntensity: 0.3,
+        roughness: 0.6
+    });
+
+    const cable1 = new THREE.Mesh(
+        new THREE.BoxGeometry(0.03, 0.02, 2),
+        cableMaterial
+    );
+    cable1.position.set(3.2, 0.06, -3);
+    scene.add(cable1);
+
+    const cable2 = new THREE.Mesh(
+        new THREE.BoxGeometry(1.5, 0.02, 0.03),
+        cableMaterial
+    );
+    cable2.position.set(3.5, 0.06, -2);
+    scene.add(cable2);
 
     // Robot 3: Purple robot carrying data (walking)
     const robot3 = createRobot(0x8b5cf6, 0xec4899);
