Add technical wow factor: loading screen, WebGL shader bg, scroll animations, cursor glow, tilt cards, magnetic buttons, ripple effects

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div id="loadingScreen" class="loading-screen">
+        <div class="loader-content">
+            <div class="loader-logo">
+                <span class="loader-icon"><i class="fas fa-bolt"></i></span>
+                <span class="loader-text">TechFlow</span>
+            </div>
+            <div class="loader-bar">
+                <div class="loader-progress"></div>
+            </div>
+            <div class="loader-status">Initializing AI Systems...</div>
+        </div>
+        <div class="loader-particles"></div>
+    </div>
+
+    <!-- WebGL Shader Background -->
+    <canvas id="shaderBg" class="shader-background"></canvas>
+
     <!-- Skip to main content for accessibility -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
@@ -110,17 +128,17 @@
         <div class="container hero-content">
             <div class="row align-items-center min-vh-80">
                 <div class="col-lg-6">
-                    <div class="hero-badge mb-3">
+                    <div class="hero-badge mb-3 reveal reveal-delay-1">
                         <i class="fas fa-award me-2"></i>Enterprise Quality &bull; Small Business Prices
                     </div>
-                    <h1 class="hero-title">
+                    <h1 class="hero-title reveal reveal-delay-2">
                         Premium IT & AI Solutions
-                        <span class="gradient-text">For Growing Businesses</span>
+                        <span class="animated-gradient-text">For Growing Businesses</span>
                     </h1>
-                    <p class="hero-subtitle">
+                    <p class="hero-subtitle reveal reveal-delay-3">
                         Expert-level custom software, AI integration, and IT support &mdash; delivered locally at prices that make sense. Based in Cranston, RI with same-day on-site support available.
                     </p>
-                    <div class="hero-cta">
+                    <div class="hero-cta reveal reveal-delay-4">
                         <a href="tel:+14013272971" class="btn btn-primary btn-lg me-3">
                             <i class="fas fa-phone me-2"></i>Call (401) 327-2971
                         </a>
@@ -128,9 +146,9 @@
                             View Services
                         </a>
                     </div>
-                    <div class="hero-trust mt-5">
+                    <div class="hero-trust mt-5 reveal reveal-delay-5">
                         <div class="trust-item">
-                            <div class="trust-number">50%</div>
+                            <div class="trust-number" data-count="50">50%</div>
                             <div class="trust-label">Below Market Rates</div>
                         </div>
                         <div class="trust-item">
